fix the name alignment

--- a/src/components/DrinkCategory.css
+++ b/src/components/DrinkCategory.css
@@ -100,9 +100,7 @@
      display: flex;
      flex-direction: row;
      gap: 3%;
-    
-     border: 1px solid black;
- justify-content: center;
+     justify-content: center;
      
    }
 
